--- a/Accenture BR/public_html/index.html
+++ b/Accenture BR/public_html/index.html
@@ -34,7 +34,7 @@
                                 <h1>Olá, professor Sérgio Nery e professora Mariza Eboli<br/>Sejam bem-vindos à Accenture</h1>
                             </header>
                             <div class="container">
-                                
+
                             </div>
                         </section>
                     </div>
@@ -44,80 +44,76 @@
                                 <h1>Agenda</h1>
                                 <p>Ao lado, você encontra toda a programação planejada, desde sua visita ao nosso escritório em São Paulo às atividades em nossa Universidade Coporativa em St. Charle em.</p>
                             </header>
-                            <div class="container">                                
-                                <button>05/04</button>                                
-                                <button>04/04</button>
+                            <div class="container">  
                                 <button class="active">03/04</button>
                                 <div class="agenda-container">
                                     <div class="row">
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 09:30</span><br/><br/>
-                                                    <span class="titulo">Aliquam ultrices volutpat magna varius facilisis.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis ultricies libero, id cursus mauris lacinia et. Mauris semper elementum lectus, non convallis justo scelerisque.</p>
+                                                    <span class="fecha">11h30 – 11h50</span><br/><br/>
+                                                    <span class="titulo">Overview sobre a Accenture</span><br/><br/>
+                                                    A Accenture é uma empresa global de consultoria, serviços em tecnologia e outsourcing. </p>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 11:30</span><br/><br/>
-                                                    <span class="titulo">Aliquam ultrices volutpat.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis ultricies libero, id cursus mauris lacinia et. Mauris semper elementum lectus, non convallis justo scelerisque eu. Phasellus adipiscing, leo vitae malesuada consequat,
-                                                    fames ac turpis egestas. Suspendisse iaculis ultricies libero, id cursus mauris lacinia et. Mauris semper elementum.</p>
+                                                    <span class="fecha">11h50 – 12h10 </span><br/><br/>
+                                                    <span class="titulo">Overview sobre Talent & Organization</span><br/><br/>
+                                                    A prática fornece uma visão holística e soluções abrangentes de RH, com experiência em Tecnologia de Processos, Organização e Cultura. </p>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 12:30</span><br/><br/>
-                                                    <span class="titulo">Praesent blandit accumsan nisl sed vehicula.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis.</p>
+                                                    <span class="fecha">12h10 – 12h40 </span><br/><br/>
+                                                    <span class="titulo">Cases: Universidade Corporativa</span><br/><br/>
+                                                    Conheça a experiência da Accenture em Learning.</p>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 13:00</span><br/><br/>
-                                                    <span class="titulo">Praesent blandit accumsan nisl sed vehicula.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis ultricies libero.</p>
+                                                    <span class="fecha">12h40 – 13h05 </span><br/><br/>
+                                                    <span class="titulo">Gestão de Pessoas na Accenture</span><br/><br/>
+                                                    O maior ativo da Accenture é o capital intelectual de seus funcionários. </p>
                                             </div>
-                                        </div>
+                                        </div>                                        
                                     </div>
-                                    <div class="row">
+                                    <div class="row"> 
                                         <div class="col especial">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 13:30</span><br/><br/>
-                                                    <span class="titulo"><span class="lounch-holder"><img src="img/launch.png"></span>ALMOÇO<br/>Duração: 1:30 hs</span><br/><br/>
+                                                    <span class="fecha">15h05 – 14h</span><br/><br/>
+                                                    <span class="titulo"><span class="lounch-holder"><img src="img/launch.png"></span>ALMOÇO</span><br/><br/>
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 15:00</span><br/><br/>
-                                                    <span class="titulo">Aliquam ultrices volutpat.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis ultricies libero, id cursus mauris lacinia et. Mauris semper elementum lectus, non convallis justo scelerisque eu. Phasellus adipiscing, leo vitae malesuada consequat,
-                                                    fames ac turpis egestas. Suspendisse iaculis ultricies libero, id cursus mauris lacinia et. Mauris semper elementum.</p>
+                                                    <span class="fecha">14h – 14h20 </span><br/><br/>
+                                                    <span class="titulo">Desenvolvimento de Pessoas na Accenture</span><br/><br/>
+                                                    Para cada área de negócio da Accenture  existe uma grade de treinamento customizada por nível de carreira.</p>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 16:00</span><br/><br/>
-                                                    <span class="titulo">Praesent blandit accumsan nisl sed vehicula.</span><br/><br/>
-                                                    Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse iaculis ultricies libero.</p>
+                                                    <span class="fecha">14h20 – 14h40 </span><br/><br/>
+                                                    <span class="titulo">Visita ao Q Center</span><br/><br/>
+                                                    O Q Center é um centro de conferências especializado no atendimento de grupos, fornecendo espaço exclusivamente para treinamentos e reuniões executivas. </p>
                                             </div>
                                         </div>
-                                        <div class="col especial">
+                                        <div class="col">
                                             <div class="container">
                                                 <p>
-                                                    <span class="fecha">— 17:30</span><br/><br/>
-                                                    <span class="titulo"><span class="lounch-holder"><img src="img/cofee.png"></span>COFFEE BREAK<br/>Duração: 0:30 hs</span><br/><br/>
+                                                    <span class="fecha">14h40 – 15h </span><br/><br/>
+                                                    <span class="titulo">Perguntas & Respostas</span><br/><br/>
                                                 </p>
                                             </div>
-                                        </div>
+                                        </div>                                        
                                     </div>
                                 </div>
                             </div>
@@ -131,11 +127,11 @@
                             <div class="container">
                                 <div class="cuadrado-naranja">
                                     <p class="acerca">A Accenture é uma empresa global de consultoria de gestão, serviços de tecnologia e outsourcing, com mais de 257 mil profissionais, que atende a clientes em mais de 120 países. 
-Ao combinar experiência ímpar, conhecimento profundo sobre todos os setores econômicos e funções de negócio, e extensa pesquisa junto às mais bem-sucedidas organizações no mundo, a Accenture colabora com seus clientes, quer sejam empresas ou governos, para ajudá-los a alcançar altos níveis de performance.
-Mais de três quartos das empresas listadas pela Fortune Global 500 são clientes da Accenture no mundo; atendemos 42 das 50 maiores organizações instaladas no País (Melhores & Maiores 2012, revista Exame).</p>
+                                        Ao combinar experiência ímpar, conhecimento profundo sobre todos os setores econômicos e funções de negócio, e extensa pesquisa junto às mais bem-sucedidas organizações no mundo, a Accenture colabora com seus clientes, quer sejam empresas ou governos, para ajudá-los a alcançar altos níveis de performance.
+                                        Mais de três quartos das empresas listadas pela Fortune Global 500 são clientes da Accenture no mundo; atendemos 42 das 50 maiores organizações instaladas no País (Melhores & Maiores 2012, revista Exame).</p>
                                     <div class="play">
-                                    <button><span class="hidden">play video</span></button>
-                                    <p class="watch">Tap to watch institutional video</p>
+                                        <button><span class="hidden">play video</span></button>
+                                        <p class="watch">Tap to watch institutional video</p>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +145,7 @@ Mais de três quartos das empresas listadas pela Fortune Global 500 são cliente
                             </header>
                             <div class="container">
                                 <div class="cuadrado-celeste">
-                                   
+
                                 </div>
                             </div>
                         </section>
@@ -211,10 +207,11 @@ Mais de três quartos das empresas listadas pela Fortune Global 500 são cliente
                         $('.descargar-agenda').addClass('hidden');
                     }
                     if ($('#item1').hasClass('selected')) {
-                        $('#footer').css('background-image', 'url("/img/pantalla-bienvenida-footer-bg.jpg")');
+                        $('#footer').addClass('hidden');
                     } else {
-                        $('#footer').css();
+                        $('#footer').removeClass('hidden');
                     }
+
                 }
 
             });
